Ref: Delete comments, merge duplicated code & fix overflow
I use the same design for the SideMenu and the SlashMenu
to reduce code duplication.
Before the overflow fix, the menus were clipped when the editor was small

--- a/src/documentRenderers/richtext/RichTextRenderer.css
+++ b/src/documentRenderers/richtext/RichTextRenderer.css
@@ -45,7 +45,8 @@ blockquote {
 }
 
 .ProseMirror {
-  overflow-x: hidden;
+  overflow-y: visible;
+  overflow-x: clip;
 }
 
 .indent {
