--- a/src/documentRenderers/richtext/SideMenu.module.css
+++ b/src/documentRenderers/richtext/SideMenu.module.css
@@ -1,5 +1,6 @@
 .menuList {
   color: var(--N800);
+  background-color: white;
   border: 1px solid var(--N40);
   box-shadow: 0px 4px 8px rgba(9, 30, 66, 0.25),
     0px 0px 1px rgba(9, 30, 66, 0.31);
